/*
 * $Id: ChangeLog,v 1.688 2003/02/06 05:29:36 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-06 02:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix display problem when not exist Head Separator.
      Reported by Luiz Culik and Ian Anderson.
  * source/rtl/dbedit.prg
    ! Fix behavior when use UDF function.
      Reported by Luiz Culik
  * contrib/mysql/mysql.c
    ! Fix conditional compilation for filelenght() function
      Reported by Juan Jose and Luca Bellini.

2003-02-07 02:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
  * source/rtl/tbrowse.prg
    ! Bug fix on decimal display of numeric field.
      Reported by: vicente@guerra.com.mx (Vicente Guerra)